# icub_ros

example/kovan/: CMakeLists.txt  package.xml
example/kovan_test2/: test.bag
example/kovan_test2/devel/: .catkin  .rosinstall  setup.sh
example/kovan_test2/devel/include/kovan/: Pose.h
example/kovan_test2/devel/lib/kovan/: follower  random_mover  sampler
example/kovan_test2/devel/lib/pkgconfig/: kovan.pc
example/kovan_test2/devel/lib/python2.7/dist-packages/kovan/msg/: _Pose.py
example/kovan_test2/devel/share/common-lisp/ros/kovan/msg/: Pose.lisp  _package.lisp  _package_Pose.lisp  kovan-msg.asd
example/kovan_test2/devel/share/gennodejs/ros/kovan/msg/: Pose.js
example/kovan_test2/devel/share/kovan/cmake/: kovan-msg-extras.cmake  kovan-msg-paths.cmake  kovanConfig.cmake
example/kovan_test2/devel/share/roseus/ros/kovan/: manifest.l
example/kovan_test2/devel/share/roseus/ros/kovan/msg/: Pose.l
example/kovan_test2/src/kovan/: CMakeLists.txt  followe.cpp  kovan.launch  package.xml  random_mover.cpp  sampler.cpp  template.cpp
example/tester/: CMakeLists.txt  package.xml
